--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "expo": "~52.0.0",
     "expo-clipboard": "~7.0.1",
-    "expo-linking": "~7.0.5",
     "expo-crypto": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "hash-wasm": "^4.12.0",
     "react": "18.3.1",
-    "react-native": "0.76.9",
     "react-dom": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-web": "~0.19.13",
     "scrypt-js": "^3.0.1",
-    "tweetnacl": "^1.0.3",
-    "buffer": "^6.0.3",
-    "react-native-get-random-values": "^1.11.0"
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "~18.3.12",
